# battleship-game_project

skuska/: CMakeLists.txt  main.c
zadanie5/: CMakeLists.txt  main.c
zadanie6/: CMakeLists.txt  adam_laszab.c  main.c
